--- a/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
@@ -1,5 +1,5 @@
 {#
-Copyright 2023 jothepro
+Copyright 2023 -2024 jothepro
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -14,12 +14,25 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import to_string %}
 
 {% block header %}
 #include {{ type_def.cpp.header | quote }}
 {% endblock %}
 
 {% block content %}
+{%  if 'str' in type_def.deriving %}
+std::ostream& operator<<(std::ostream& os, {{ type_def.cpp.name }} const& value) {
+    os << "{{ type_def.cpp.typename }}(";
+    {% for field in type_def.fields %}
+    os << "{{ field.cpp.name }}=";
+    {{ to_string("value." ~ field.cpp.name, field.type_ref) }}
+    {{ 'os << ", ";' if not loop.last }}
+    {% endfor %}
+    os << ")";
+    return os;
+}
+{% endif %}
 {% if 'eq' in type_def.deriving %}
 bool operator==(const {{ type_def.cpp.name }}& lhs, const {{ type_def.cpp.name }}& rhs) {
     return
