--- a/src/pydjinni/generator/cppcli/cppcli/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cppcli/cppcli/templates/header/record.hpp.jinja2
@@ -19,6 +19,9 @@ limitations under the License.
 {% block header %}
 #pragma once
 #include {{ (type_def.cpp.derived_header if type_def.cpp.base_type else type_def.cpp.header) | quote }}
+{% for header in type_def.dependencies | headers('cppcli') -%}
+#include {{ header }}
+{% endfor %}
 {% endblock %}
 
 {% block content %}
