feat: no deprecation warning on deprecated pydjinni interfaces

--- a/src/pydjinni/generator/cppcli/cppcli/templates/base.jinja2
+++ b/src/pydjinni/generator/cppcli/cppcli/templates/base.jinja2
@@ -18,11 +18,19 @@ limitations under the License.
 {% block header %}
 {% endblock %}
 
+{% if type_def.deprecated %}
+#pragma warning( push )
+#pragma warning( disable : 4947 )
+#pragma warning( disable : 4996 )
+{% endif %}
 {% if type_def.cppcli.namespace %}
 namespace {{ type_def.cppcli.namespace }} {
 {% endif %}
 {% block content %}
 {% endblock content %}
+{% if type_def.deprecated %}
+#pragma warning( pop )
+{% endif %}
 {% if type_def.cppcli.namespace -%}
 }  // namespace {{ type_def.cppcli.namespace }}
 {% endif %}
